# ocg-bot-v2

./: .env  .gitignore  README.md  bot.py  pyproject.toml
ocg_bot_v2/libraries/: Card.py  SqliteUtils.py  forbideGet.py  globalMessage.py  guessManage.py  image.py  raiseCard.py  sendAction.py  staticvar.py
ocg_bot_v2/plugins/: __init__.py  cardPieChart.py  daily.py  data_update.py  funFunction.py  guess_card.py  help.py  increaseRefuse.py  maiPic.py  ocg.py  priceSearch.py  public.py  raise.py
ocg_bot_v2/static/cdb/: pre-release.cdb
