[project]
name = "ocg-bot-V2"
version = "0.1.0"
description = "ocg-bot-V2"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["ocg_bot_v2/plugins"]
builtin_plugins = ["echo"]
